--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,11 @@
-pip:
-    opencv-contrib-python
-    matplotlib
+cycler==0.10.0
+kiwisolver==1.2.0
+matplotlib==3.2.1
+numpy==1.18.4
+opencv-contrib-python==4.2.0.34
+pkg-resources==0.0.0
+plotly==4.8.0
+pyparsing==2.4.7
+python-dateutil==2.8.1
+retrying==1.3.3
+six==1.15.0
